migrate to mogodb

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,10 @@
 # path to db 
 #   jdbc:h2:mem:tacocloud
 spring:     
-    cassandra:
-        keyspace-name: tacocloud
-        schema-action: recreate
-        local-datacenter: datacenter1
-        # contact-points:
-        # - localhost
-        port: 9043
+    data:
+        mongodb:
+            # host: localhost
+            port: 27017
+            # username: tacocloud
+            # password: s3cr3tp455w0rd
+            database: tacoclouddb
